--- a/README.rdoc
+++ b/README.rdoc
@@ -2,4 +2,5 @@
 By Julia, Cristen, Alex, and Morgan
 
 mwahhahahahahah merge conflict hahahaha
+hello github desktop pls work
 <tt>rake doc:app</tt>.
