Update README again

--- a/README.rdoc
+++ b/README.rdoc
@@ -3,4 +3,5 @@ By Julia, Cristen, Alex, and Morgan
 
 mwahhahahahahah merge conflict hahahaha
 hello github desktop pls work
+take2
 <tt>rake doc:app</tt>.
